# talk_aloud_to_me

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-xtts.txt  run.sh
.github/workflows/: ci.yml
scripts/: branch-protection.json  setup-branch-protection.sh
server/: jobs.py  main.py  pipeline.py  xtts_worker.py
server/engines/: base.py  kokoro_en.py  router.py  xtts_pl.py
tests/: test_pipeline.py
tools/: build_dataset.py  clone_preview.py  curate_voice.py  finetune_infer.py  finetune_probe.py  finetune_sample.py  finetune_xtts.py  slim_checkpoint.py
voices/: README.md
web/: app.js  index.html  style.css
xtts_engine/: pyproject.toml
