[project]
name = "tts-reader"
version = "0.1.0"
description = "Local text-to-speech reader (Polish via XTTS-v2, English via Kokoro) with podcast-style playback."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # English engine (Kokoro). mlx-audio pins transformers>=5.5, which is
    # incompatible with coqui-tts (XTTS), so XTTS lives in its own uv project
    # (./xtts_engine) driven by a subprocess worker.
    "mlx-audio>=0.2.0",
    # Kokoro's text->phoneme frontend; the [en] extra adds the English g2p pipeline.
    "misaki[en]>=0.9",
    # spaCy English model misaki needs. Declared explicitly so `uv sync` keeps it
    # (otherwise it gets pruned and re-downloaded on every sync). Matches spaCy 3.8.
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "lingua-language-detector>=2.0",
    "numpy<2",
    "soundfile>=0.12",
]

[tool.uv]
package = false

[dependency-groups]
# Installed into .venv by `uv sync` for `make lint` / `make check` / `make test`.
dev = [
    "ruff>=0.14",
    "bandit>=1.8",
    "pytest>=8",
]
# Lightweight deps for the platform-independent pipeline tests (no mlx/torch, so
# they install + run on Linux CI). Use: `uv sync --only-group test`.
test = [
    "pytest>=8",
    "numpy<2",
    "lingua-language-detector>=2.0",
]

# =============================================================================
# Ruff — lint + format (line length, import sort, pyflakes, pyupgrade)
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # line length is enforced by the formatter, not the linter

[tool.ruff.lint.per-file-ignores]
# These scripts deliberately set env vars / dup file descriptors before their
# heavy imports, so not every import sits at the top of the module (E402).
"tools/*" = ["E402"]
"server/xtts_worker.py" = ["E402"]

# =============================================================================
# Bandit — security linter
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "xtts_engine"]
# Low-severity, intentional patterns in this app:
#   B101 assert_used; B404/B603/B607 subprocess (ffmpeg + the XTTS worker, never
#   shell=True, all args code-controlled); B110 try/except/pass (best-effort GPU
#   cache release). Medium+ findings stay enabled and are reviewed via # nosec.
skips = ["B101", "B404", "B603", "B607", "B110"]

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
